--- a/templates/coming-soon.html
+++ b/templates/coming-soon.html
@@ -112,7 +112,7 @@
   </head>
   <body onload="updateCountdown()">
     <div class="bgimg">
-        <img src="/READY-GAMES-LOGO.png" class="logo"/>
+        <img src="/media/count-down/READY-GAMES-LOGO.png" class="logo" alt="logo"/>
       <div class="middle">
         <h1>COMING SOON</h1>
         <hr>
