Sample deploy debug=false
Signed-off-by: Joseph Zamora <joseph.zamora64@gmail.com>

--- a/templates/coming-soon.html
+++ b/templates/coming-soon.html
@@ -14,7 +14,7 @@
   }
 
   .bgimg {
-    background-image: url("{%static 'ui/count-down/FOTO-PORTADA.png' %}");
+    background-image: url("{%static '/admin/FOTO-PORTADA.png' %}");
     height: 100%;
     background-position: center;
     background-size: contain;
