Sample deploy debug=false
Signed-off-by: Joseph Zamora <joseph.zamora64@gmail.com>

--- a/templates/coming-soon.html
+++ b/templates/coming-soon.html
@@ -27,7 +27,7 @@
 
   @media screen and (max-width: 480px) {
     .bgimg {
-      background-image: url("{%static '/ui/count-down/FOTO-PORTADA-MOBILE.png' %}");
+      background-image: url("{%static '/admin/FOTO-PORTADA-MOBILE.png' %}");
       transform: none;
       background-size: cover;
     }
@@ -112,7 +112,7 @@
 </head>
 <body onload="updateCountdown()">
 <div class="bgimg">
-    <img src="{%static 'ui/count-down/READY-GAMES-LOGO.png' %}" class="logo" alt="logo"/>
+    <img src="{%static 'admin/READY-GAMES-LOGO.png' %}" class="logo" alt="logo"/>
   <div class="middle">
     <h1>COMING SOON</h1>
     <hr>
