--- a/templates/coming-soon.html
+++ b/templates/coming-soon.html
@@ -88,19 +88,19 @@
   // Function to calculate and update the countdown
   function updateCountdown() {
     // Set the target date (year, month, day, hour, minute, second)
-    let targetDate = new Date("2023-17-05T12:00:00Z");
+    var targetDate = new Date("2023-07-17T12:00:00Z");
 
     // Get the current date and time
-    let currentDate = new Date();
+    var currentDate = new Date();
 
     // Calculate the time difference in milliseconds
-    let timeDiff = targetDate - currentDate;
+    var timeDiff = targetDate - currentDate;
 
     // Calculate the remaining days, hours, minutes, and seconds
-    let days = Math.floor(timeDiff / (1000 * 60 * 60 * 24));
-    let hours = Math.floor((timeDiff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-    let minutes = Math.floor((timeDiff % (1000 * 60 * 60)) / (1000 * 60));
-    let seconds = Math.floor((timeDiff % (1000 * 60)) / 1000);
+    var days = Math.floor(timeDiff / (1000 * 60 * 60 * 24));
+    var hours = Math.floor((timeDiff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+    var minutes = Math.floor((timeDiff % (1000 * 60 * 60)) / (1000 * 60));
+    var seconds = Math.floor((timeDiff % (1000 * 60)) / 1000);
 
     // Display the countdown in the HTML element with id "countdown"
     document.getElementById("countdown").innerHTML = days + "d  &nbsp;&nbsp;" + hours + "h  &nbsp;&nbsp;" + minutes + "m  &nbsp;&nbsp;" + seconds + "s";
