--- a/templates/receipt-template.html
+++ b/templates/receipt-template.html
@@ -100,6 +100,11 @@
                     <td class="name">Taxes</td>
                     <td class="price">{{ taxes }}</td>
                 </tr>
+                    <tr>
+                    <td class="id"></td>
+                    <td class="name">Discounts</td>
+                    <td class="price">{{ discounts }}</td>
+                    </tr>
                 <tr>
                     <td class="id"></td>
                     <td class="name">TOTAL</td>
@@ -109,6 +114,7 @@
             </table>
 
             <p class="centered">Return Policy: {{ return_policy }}
+            <p class="centered">Payment Details: {{ payment_details: }}
             <br>¡Gracias por su compra!
             <br>readygamescr.com</p>
     </div>
