--- a/templates/receipt-template.html
+++ b/templates/receipt-template.html
@@ -114,7 +114,7 @@
             </table>
 
             <p class="centered">Return Policy: {{ return_policy }}
-            <p class="centered">Payment Details: {{ payment_details: }}
+            <p class="centered">Payment Details: {{ payment_details }}
             <br>¡Gracias por su compra!
             <br>readygamescr.com</p>
     </div>
