--- a/templates/receipt-template.html
+++ b/templates/receipt-template.html
@@ -60,7 +60,7 @@
                 }
             }
         </style>
-        <title>Receipt example</title>
+
     </head>
     <body>
         <div class="ticket">
@@ -78,8 +78,8 @@
                 <thead>
                     <tr>
                         <th class="id">ID</th>
-                        <th class="name">Name</th>
-                        <th class="price">Price</th>
+                        <th class="name">Nombre</th>
+                        <th class="price">Precio</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -97,12 +97,12 @@
                 </tr>
                 <tr>
                     <td class="id"></td>
-                    <td class="name">Taxes</td>
+                    <td class="name">Impuestos</td>
                     <td class="price">{{ taxes }}</td>
                 </tr>
                     <tr>
                     <td class="id"></td>
-                    <td class="name">Discounts</td>
+                    <td class="name">Descuentos</td>
                     <td class="price">{{ discounts }}</td>
                     </tr>
                 <tr>
