--- a/templates/receipt-template.html
+++ b/templates/receipt-template.html
@@ -113,8 +113,8 @@
                 </tbody>
             </table>
 
-            <p class="centered">Return Policy: {{ return_policy }}
-            <p class="centered">Payment Details: {{ payment_details }}
+            <p class="centered">Política de devoluciones: {{ return_policy }}
+            <p class="centered">Detalles de Pago: {{ payment_details }}
             <br>¡Gracias por su compra!
             <br>readygamescr.com</p>
     </div>
