--- a/templates/coming-soon.html
+++ b/templates/coming-soon.html
@@ -103,10 +103,10 @@
     var timeDiff = targetDate - currentDate;
 
     // Calculate the remaining days, hours, minutes, and seconds
-    var days = Math.floor(timeDiff / (1000 * 60 * 60 * 24));
-    var hours = Math.floor((timeDiff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-    var minutes = Math.floor((timeDiff % (1000 * 60 * 60)) / (1000 * 60));
-    var seconds = Math.floor((timeDiff % (1000 * 60)) / 1000);
+    var days = 0;
+    var hours = 0;
+    var minutes = 0;
+    var seconds = 0;
 
     // Display the countdown in the HTML element with id "countdown"
     document.getElementById("countdown").innerHTML = days + "d  &nbsp;&nbsp;" + hours + "h  &nbsp;&nbsp;" + minutes + "m  &nbsp;&nbsp;" + seconds + "s";
