--- a/templates/receipt-template.html
+++ b/templates/receipt-template.html
@@ -71,7 +71,7 @@
                 <br>{{ store_contact }}
                 <br>{{ receipt_number }}
                 <br>{{ purchase_date }}
-                <br>{{ customer_name }}
+                <br><!--email_off-->{{ customer_name }}<!--/email_off-->
                 <br>{{ payment_method }}
             </p>
             <table>
