emails info to receipt

--- a/templates/receipt-template.html
+++ b/templates/receipt-template.html
@@ -70,8 +70,10 @@
                 <br>{{ store_address }}
                 <br>{{ store_contact }}
                 <br>{{ receipt_number }}
+                <br>{{ receipt_mail }}
                 <br>{{ purchase_date }}
                 <br><!--email_off-->{{ customer_name }}<!--/email_off-->
+                <br>{{ customer_mail }}
                 <br>{{ payment_method }}
             </p>
             <table>
