Status en el receipt
Signed-off-by: Joseph Zamora <joseph.zamora64@gmail.com>

--- a/templates/receipt-template.html
+++ b/templates/receipt-template.html
@@ -72,7 +72,8 @@
                 <br> Persona Fisica: 117350106
                 <br>{{ receipt_number }}
                 <br><!--email_off-->{{ receipt_mail }}<!--/email_off-->
-                <br>Condicion: {{ payment_method }}
+                <br>Metodo: {{ payment_method }}
+                <br>Condicion: {{ status }}
                 <br>Moneda: CRC
                 <br>{{ purchase_date }}
                 <br>{{ customer_name }}
