--- a/templates/receipt-template.html
+++ b/templates/receipt-template.html
@@ -119,7 +119,7 @@
                 </tbody>
             </table>
             <table style="margin-top: 10px">
-                {% for item in itemsRemaining %}
+                {% for item in items_remaining %}
                     <tr>
                         <td class="id">RESTANTE-</td>
                         <td class="name-remaining">{{ item.name }}</td>
