Track wfbox button in admin
Signed-off-by: Joseph Zamora <joseph.zamora64@gmail.com>

--- a/templates/overrides/send_wfbox_email.html
+++ b/templates/overrides/send_wfbox_email.html
@@ -4,5 +4,6 @@
     {{ block.super }}
     <div class="submit-row">
         <input type="submit" value="Enviar correo a wfbox" name="_correo_a_wfbox">
+        <input type="submit" value="Rastrear mediante WFBox" name="_track_wfbox">
     </div>
 {% endblock %}
