Center receipt notes
Signed-off-by: Joseph Zamora <joseph.zamora64@gmail.com>

--- a/templates/receipt-template.html
+++ b/templates/receipt-template.html
@@ -129,7 +129,7 @@
             </table>
 
             {% if receipt_comments %}
-                <div style="margin-top: 10px">
+                <div class="centered" style="margin-top: 10px">
                     <i>
                         Nota: {{ receipt_comments }}
                     </i>
