Generate excel of products
Signed-off-by: Joseph Zamora <joseph.zamora64@gmail.com>

--- a/templates/overrides/change_list.html
+++ b/templates/overrides/change_list.html
@@ -47,6 +47,13 @@
         <ul class="object-tools">
           {% block object-tools-items %}
             {% change_list_object_tools %}
+            {% if request.GET.console_title or request.GET.tipo or request.GET.used__exact %}
+              <li>
+                <a href="{% url 'products-excel' %}?console_title={{ request.GET.console_title }}&type={{ request.GET.tipo }}&used={{ request.GET.used__exact }}" class="addlink">
+                  📑Excel {{  request.GET.console_title  }}
+                </a>
+              </li>
+            {% endif %}
           {% endblock %}
         </ul>
     {% endblock %}
