--- a/product/static/css/admin_styles.css
+++ b/product/static/css/admin_styles.css
@@ -5,7 +5,7 @@
     right: 20px;
     display: none;
     cursor: pointer;
-    background-color: #007bff;
+    background-color: var(--secondary);
     color: #ffffff;
     border: none;
     padding: 6px 11px;
@@ -16,5 +16,5 @@
 
 
 #scroll-down-button:hover {
-    background-color: #0056b3;
+    background-color: var(--primary);
 }
