--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -6,7 +6,7 @@
 
 {% block extrastyle %}
     {{ block.super }}
-    <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'assets/common/favicon.ico' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'admin_styles.css' %}">
 {% endblock %}
 
