--- a/static/admin_styles.css
+++ b/static/admin_styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('/static/bg.jpg');
+    background-image: url('/static/assets/common/bg.jpg');
     background-repeat: repeat;
     background-size: cover;
 }
