logo fix and new Sales fields
Signed-off-by: Joseph Zamora <joseph.zamora64@gmail.com>

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -172,10 +172,10 @@
                 <img style="width: 100px" src="https://upload.wikimedia.org/wikipedia/commons/4/48/New_Nintendo_2DS_XL.svg">
             </div>
         {% else %}
-            <img alt="logo" style="width: 100px" src="{% static 'readygameslogo.png' %}" />
+            <img alt="logo" style="width: 100px" src="{% static 'assets/common/readygameslogo.png' %}" />
         {% endif %}
     {% else %}
-        <img alt="logo" style="width: 100px" src="{% static 'readygameslogo.png' %}" />
+        <img alt="logo" style="width: 100px" src="{% static 'assets/common/readygameslogo.png' %}" />
     {% endif %}
 {% endwith %}
 {% if user.is_anonymous %}
