--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -153,7 +153,7 @@
             </div>
         {% elif title == '3ds'%}
             <div class="console-logo">
-                <img style="width: 100px" src="https://upload.wikimedia.org/wikipedia/commons/1/19/Nintendo_3ds_logo.svg">
+                <img style="width: 100px" src="https://upload.wikimedia.org/wikipedia/commons/1/11/Nintendo_3DS_logo.png">
             </div>
         {% elif title == 'new-3ds'%}
             <div class="console-logo">
