Added new psp consoles
Signed-off-by: Joseph Zamora <joseph.zamora64@gmail.com>

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -63,7 +63,7 @@
             <div class="console-logo">
                 <img style="width: 100px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/PlayStation_Vita_logo.svg/1200px-PlayStation_Vita_logo.svg.png">
             </div>
-        {% elif title == 'psp'%}
+        {% elif title == 'psp' or title == 'psp1000' or title == 'psp2000' or title == 'psp3000'%}
             <div class="console-logo">
                 <img style="width: 100px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0e/PSP_Logo.svg/1130px-PSP_Logo.svg.png">
             </div>
