Added new psp consoles
Signed-off-by: Joseph Zamora <joseph.zamora64@gmail.com>

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -67,6 +67,10 @@
             <div class="console-logo">
                 <img style="width: 100px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0e/PSP_Logo.svg/1130px-PSP_Logo.svg.png">
             </div>
+        {% elif title == 'psp-go'%}
+        <div class="console-logo">
+            <img style="width: 100px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/13/PSP_Go_logo.svg/600px-PSP_Go_logo.svg.png">
+        </div>
         {% elif title == 'wii'%}
             <div class="console-logo">
                 <img style="width: 100px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bc/Wii.svg/423px-Wii.svg.png">
