Added sega master system to consoles
Signed-off-by: Joseph Zamora <joseph.zamora64@gmail.com>

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -99,6 +99,10 @@
             <div class="console-logo">
                 <img style="width: 100px" src="https://upload.wikimedia.org/wikipedia/commons/0/08/Atari_2600_logo.svg">
             </div>
+        {% elif title == 'sega-master-system'%}
+        <div class="console-logo">
+            <img style="width: 100px" src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Sega-master-system-logo.png">
+        </div>
         {% elif title == 'sega-genesis'%}
             <div class="console-logo">
                 <img style="width: 100px" src="https://upload.wikimedia.org/wikipedia/commons/7/74/Sega_genesis_logo.svg">
