Added neogeo pocket to consoles
Signed-off-by: Joseph Zamora <joseph.zamora64@gmail.com>

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -179,6 +179,10 @@
             <div class="console-logo">
                 <img style="width: 100px" src="https://upload.wikimedia.org/wikipedia/commons/4/48/New_Nintendo_2DS_XL.svg">
             </div>
+        {% elif title == 'neogeo-pocket'%}
+        <div class="console-logo">
+            <img style="width: 100px" src="https://upload.wikimedia.org/wikipedia/commons/7/71/SNK_NeoGeo_Pocket_logo.png">
+        </div>
         {% else %}
             <img alt="logo" style="width: 100px" src="{% static 'assets/common/readygameslogo.png' %}" />
         {% endif %}
