--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -39,7 +39,7 @@
             <div class="console-logo">
                 <img style="width: 100px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/PlayStation_4_logo_and_wordmark.svg/755px-PlayStation_4_logo_and_wordmark.svg.png">
             </div>
-        {% elif title == 'ps5' or title == 'ps5-slim' %}
+        {% elif title == 'ps5' or title == 'ps5-slim' or title == 'ps5-pro' %}
             <div class="console-logo">
                 <img style="width: 100px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/PlayStation_5_logo_and_wordmark.svg/768px-PlayStation_5_logo_and_wordmark.svg.png">
             </div>
