--- a/templates/receipt-template.html
+++ b/templates/receipt-template.html
@@ -140,7 +140,8 @@
              <img src="{{ return_policy }}" rel="icon"  style="max-width: 100%;" />
             <p class="centered">Escanea el QR o entra a este enlace:</p>
             <p class="centered"><a href="{{ qr_url }}">{{ qr_url }}</a></p>
-            <b>Las devoluciones se hacen mediante un cambio equivalente de otro producto. No hay devolucion de dinero</b>
+            <b>Las devoluciones se hacen mediante un cambio equivalente de otro producto. No hay devolucion de dinero.</b>
+            <b>Una devolucion no incluye el costo de envío.</b>
             <p><br>¡Gracias por su compra!
             <br>readygamescr.com</p>
             <br>Instagram @readygamescr</p>
