--- a/templates/receipt-template.html
+++ b/templates/receipt-template.html
@@ -69,7 +69,7 @@
                 <br>{{ store_name }}
                 <br>{{ store_address }}
                 <br>{{ store_contact }}
-                <br> Persona Fisica: 117350106
+                <br> Persona Jurídica: 3101884334
                 <br>{{ receipt_number }}
                 <br><!--email_off-->{{ receipt_mail }}<!--/email_off-->
                 <br>Metodo: {{ payment_method }}
